[tool.poetry]
name = "rl-zoo"
version = "0.1.0"
description = ""
authors = ["nutorbit <nutorbitx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.3.23"
jaxlib = "^0.3.22"
dm-haiku = "^0.0.8"
optax = "^0.1.3"
gym = {extras = ["all"], version = "^0.26.2"}
tqdm = "^4.64.1"
MiniGrid = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = ">7.0.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
